# polarfire-crypto

./: .gitignore  MPFS_ICICLE_eMMC.prjx  Makefile
component/work/COREAXITOAXICONNECT_C0/: COREAXITOAXICONNECT_C0.cxf  COREAXITOAXICONNECT_C0.sdb  COREAXITOAXICONNECT_C0.v  COREAXITOAXICONNECT_C0_manifest.txt
component/work/COREAXITOAXICONNECT_C0/COREAXITOAXICONNECT_C0_0/: COREAXITOAXICONNECT_C0_COREAXITOAXICONNECT_C0_0_COREAXITOAXICONNECT.cxf
component/work/COREAXITOAXICONNECT_C0/COREAXITOAXICONNECT_C0_0/rtl/vlog/core/: COREAXITOAXICONNECT.v
component/work/crypto_mmio/: crypto_mmio.cxf  crypto_mmio.sdb  crypto_mmio.v  crypto_mmio_DRC.html  crypto_mmio_DRC.xml  crypto_mmio_manifest.txt
constraint/: MPFS_ICICLE_KIT_BASE_DESIGN_derived_constraints.sdc  run_tao_ag.tcl
hdl/: SDIO_register.v  aes256_fifo.v  crypto-accel.v  crypto_regs.v  crypto_regs_pkg.v  fifo.v  key_ram.v  shift_reg.v  simple_dpram_sclk.v  word_block.v
smartgen/: crypto_mmio_work.ixf
software/: Cargo.toml
software/.cargo/: config
software/driver/: Makefile  cryptodma.c  setup-config  setup.sh
software/src/: lib.rs  main.rs
software/src/crypt/: hw.rs  mod.rs  sw.rs
software/src/utils/: hex.rs
stimulus/: assert.v  crypto_accel_axi.v  test__aes256_fifo.v  test__crypto_accel_axi.v  test__words_block.v  words_block.v  words_block.v.bak
