[package]
name = "polarfire-softaes"
version = "0.1.0"
authors = ["Gui Andrade <gh@archshift.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[[bin]]
name = "polarfire-softaes"
path = "./src/main.rs"

[features]
default = []
sw = ["aes-ctr"]

[dependencies]
aes-ctr = {version = "0.6", optional = true}
bitutils = "3.0"
memmap = "0.7"
