[package]
name = "pfaes"
version = "0.1.0"
authors = ["Gui Andrade <gh@archshift.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true

[[bin]]
name = "pfaes-bin"
path = "./src/main.rs"

[features]
default = []
use_std = []
sw = ["aes-ctr"]

[dependencies]
aes-ctr = {version = "0.6", optional = true}
bitutils = {version = "3.0", default-features = false}
memmap = "0.7"
byte-slice-cast = {version = "1.0", default-features = false}
itertools = {version = "0.10", default-features = false}